Ruff worflow changes

--- a/.github/workflows/ruff_lint_format.yml
+++ b/.github/workflows/ruff_lint_format.yml
@@ -21,7 +21,22 @@ jobs:
         run: pip install ruff
 
       - name: Run Ruff
-        run: ruff check .
+        run: ruff check . --output-format=github .
+
+
+  format:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+        
+      - name: Install Ruff
+        run: pip install ruff
 
       - name: Check formatting
         run: ruff format . --check
