--- a/.github/workflows/ruff_lint_format.yml
+++ b/.github/workflows/ruff_lint_format.yml
@@ -39,4 +39,4 @@ jobs:
         run: pip install ruff
 
       - name: Check formatting
-        run: ruff format . --check
+        run: ruff format . --check --diff
